fixed a bugged with the overlay overlapping on some browsers

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -104,29 +104,29 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(rgba(230, 218, 218, 0.25), rgba(255, 0, 0, 0.45));
+  background: radial-gradient(rgba(255, 255, 255, 0.26) 10%, rgba(255, 255, 255, 0) 100%);
   /* IE10+ */
   background-image: -ms-radial-gradient(
     center top,
     ellipse farthest-corner,
-    rgba(230, 218, 218, 1) 10%,
-    #ffffff 100%
+    rgba(0, 0, 0, 0.26) 10%,
+    rgba(255, 255, 255, 0) 100%
   );
 
   /* Mozilla Firefox */
   background-image: -moz-radial-gradient(
     center top,
     ellipse farthest-corner,
-    var(--color-overlay-from),
-    var(--color-overlay-to)
+    rgba(255, 255, 255, 0.26) 10%,
+    rgba(255, 255, 255, 0) 100%
   );
 
   /* Opera */
   background-image: -o-radial-gradient(
     center top,
     ellipse farthest-corner,
-    rgba(230, 218, 218, 1) 10%,
-    #ffffff 100%
+    rgba(255, 255, 255, 0.26) 10%,
+    rgba(255, 255, 255, 0) 100%
   );
 
   /* Webkit (Safari/Chrome 10) */
@@ -136,8 +136,8 @@ ul {
     0,
     center top,
     359,
-    color-stop(10, rgba(230, 218, 218, 1)),
-    color-stop(100, #ffffff)
+    rgba(255, 255, 255, 0.26) 10%,
+    rgba(255, 255, 255, 0) 100%
   );
 
   /* Webkit (Chrome 11+) */
